# 125970-Assignment-1-Propositional-Logic-Evaluator-PLC

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
.devcontainer/: devcontainer.json
report/: 0_-_cover.aux  0_-_cover.tex  1_-_introduction.tex  2_-_language_design.tex  3_-_system_architecture.tex  4_-_implementation.tex  5_-_testing.tex  6_-_conclusion.tex  7_-_appendix_source.tex  8_-_appendix_contact.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib
src/125970eval/: main.py
src/125970eval/components/: lexica.py  parsers.py  ui.py
src/125970eval/components/ast/: statement.py
tests/: test_evaluator.py
